[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hardsector-tool"
version = "0.0.1"
description = "Tools to decode and analyze hard-sectored floppy flux images."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Contributors" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "black>=24.10.0",
  "ruff>=0.6.8",
  "pytest>=7.4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "PL", "SIM"]
ignore = ["E501", "PLR0912", "PLR0913", "PLR0915", "PLR2004", "B023", "SIM108"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["hardsector_tool"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "slow: marks tests as slow or fixture-heavy",
]
